# pytzer

./: .gitignore  .pipyrc  .pypirc  .readthedocs.yml  .zenodo.json  404.html  AW90.py  BRBJBLR.py  CNAME  CaCl2_fpd.m  CaCl2_tconv.py  GIVAKT-coeffs.py  Gex_nRt_stats  H2SO4_DoD.ipynb  HMW84_funcgen_bC.py  HMW84_funcgen_caa.py  HMW84_funcgen_cca.py  HPR93_test.py  LICENSE  MIAMI cheatsheet.txt  MarChemSpec_coeffs.txt  PM73_funcgen.py  PM73_funcs.py  PitzH2SO4.f90  PitzH2SO4.for  PitzerFast.py  README.md  RM81_test.py  TEOS10.py  _map.html  agprim.py  anotherway.m  arraystab.py  asym.py  bCderivs.m  bCderivs.py  bCderivs_pres.m  cdict_builder.py  combicov.py  compare.py  (+137 more)
.misc/: coverage.txt
archive/: CaCl2_fpd.m  CaCl2_fpd.py  PitzCaCl2.f90  PitzH2SO4.f90  agprim.py  dataprep.py  dh.py  dissociations.csv  equilib.py  gradprop.py  hfcquil.py  howiso.m  metatest.py  miamicomp.py  miamicompcoeffs.py  mwe_numba.py  newlib.py  parameterset.py  pzfit.py  simloop_vpl_test.m  simpar_fpd_osm25_1by1.m  simpar_fpd_v1.m  simpar_fpd_v2.py  simpar_vpl_22.m  simpytz_fpd25.py  sulfit_plot.py  sulfit_prep.py  uncertiso.py  vplcurve.py  wtf_2pi.m  zsolver.py
datasets/: .~lock.iso.xlsx#  CRP94 checks.csv  CRP94 solver.csv  HMW84_funcs_bC.py  HMW84_funcs_caa.py  HMW84_funcs_cca.py  allmt.res  allmt_coeffs.res  allmt_stats - Copy.res_superlong  allmt_stats.res  allmt_stats.res_base  iso.xlsx
docs/: cdicts.md  cfdicts.md  equilibrate.md  index.md  io.md  libraries.md  model.md  name-conventions.md  params.md  props.md  quick-start.md  references.md  refs.md  requirements.txt  version-history.md  versions.md  workflows.md
equilibrate/: index.html
libraries/: index.html
model/: index.html
notebooks/: notebook.tex  unsymmetricalMixing.ipynb
omo/: mwe_omo.py  results.json
paper/: mphbibliouea.bib  paper.bib  paper.md
params/: index.html
pytzer/: M88 Table 4.csv  M88.xlsx  __init__.py  bcao.py  cdicts.py  cfdicts.py  cflibs.py  coefficients.csv  coefficients.py  coeffs.py  components.py  convert.py  (+40 more)
(+233 files in other folders)
