[build-system]
requires = [
    "setuptools",
    "pytzer",
    "jax",
    "numpy",
    "scipy",
]
build-backend = "setuptools.build_meta"

[project]
name = "Calkulate"
description = "The Pitzer model for chemical activities and equilibria in aqueous solutions in Python"
readme = "README.md"
dependencies = [
    "pytzer",
    "jax",
    "numpy",
    "scipy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pytzer.meta.version"}
